syntax="proto3";

package servicepb;

message JobRef {
    uint64 job_id = 1;
    uint64 node_id = 2;
}

message JobProgressStep {
    message Output {
        bytes stdout = 1;
        bytes stderr = 2;
    }
    JobRef job = 1;
    Output output = 2;
}

message JobProgressResponse {
}

service FeedbackService {
    rpc JobProgress(stream JobProgressStep) returns (JobProgressResponse) {}
}
